Getter 어노테이션 추가 및 복합키 Domain에 대한 로직 수정